# Operations-research-codes

./: .gitignore  README.md  met hunga.py  proyecto.ipynb  pyproject.toml  simplex as poo (1).py  simplex as poo.py  simplex v2.1.py  simplex v2.3.py  simplex v2.6.py  versionDaniel.py  versionDaniel2.py
Docs/: READMES.md
Hungarian/: met hunga.py  met_hunga.py  unit_test_hungaro.py
Revised-Simplex/Deprecated-older versions/: simplex v2.4.py  versionDaniel.py
regresion/: DATOS PARA TRABAJO GRUPOS I.xlsx  calculo_marea.ipynb  utils.py
