[tool.poetry]
name = "pythoninvopsimplex"
version = "0.1.0"
description = "Simplex Revisado"
authors = ["ImMamey <32584037+ImMamey@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "^3.5.3"
jupyter = "^1.0.0"
traitlets = "5.9.0"
pandas = "^2.1.1"
tabulate = "^0.9.0"
pyvirtualdisplay = "^3.0"
matplotlib = "^3.8.0"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
